[DVW-02] Added image upload service