@@ -3,21 +3,18 @@ package com.diagno.vision.webapps.diagnovision.config;
 import com.diagno.vision.webapps.diagnovision.filter.CsrfCookieFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
 import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
-import org.springframework.security.web.csrf.CsrfTokenRepository;
 import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 import static com.diagno.vision.webapps.diagnovision.constant.Constants.HASHING_STRENGTH;
 import static org.springframework.security.config.Customizer.withDefaults;
@@ -28,12 +25,16 @@ public class SecurityConfiguration {
     @Bean
     SecurityFilterChain defaultSecurityFilterChain(HttpSecurity http) throws Exception {
 
-        http.cors(withDefaults()).csrf((csrf) -> csrf
+        http.cors(withDefaults()).csrf(csrf -> csrf
                                                     .csrfTokenRequestHandler(new CsrfTokenRequestAttributeHandler()) //Please set to ignore public apis
                                                     .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())) //Set to allow JS code to save the csrf token
                                                     .addFilterAfter(new CsrfCookieFilter(), BasicAuthenticationFilter.class)
-                .authorizeHttpRequests((requests) -> requests
-                                                        .requestMatchers("/user", "/file").authenticated()
+                .authorizeHttpRequests(requests -> requests
+                                                        .requestMatchers("/user", "/file").hasAnyRole(Role.ROLE_ADMIN.getValue(),
+                                                                                                                     Role.ROLE_REGULAR.getValue(),
+                                                                                                                     Role.ROLE_PROFESSIONAL.getValue())
+                                                        .requestMatchers("/users").hasAnyRole(Role.ROLE_ADMIN.getValue(),
+                                                                                                       Role.ROLE_PROFESSIONAL.getValue())
                                                         .requestMatchers("/register").permitAll());
         return http.build();
     }
@@ -41,8 +42,8 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","PATCH","DELETE"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        configuration.setAllowedMethods(List.of("GET","POST","PATCH","DELETE"));
         configuration.setAllowedHeaders(Collections.singletonList("*"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(600L);
